tests/invalid/list_slice_end_non_int/main.py
def run_case() -> None:
    xs: list[int] = [0, 1, 2, 3]
    ys: list[int] = xs[1:"b"]
    print(ys)


if __name__ == "__main__":
    run_case()
